recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: '(' expected but identifier found.
  if steps==0 { forward(0) } else { spiral(steps-1,angle,length,increment) ; left(angle) ; forward(length+increment) ; length:= length = increment ;}
     ^Spiral:3: error: illegal start of simple expression
} 
^