recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    { 
  if steps==0 { forward(0) } else { spiral(steps-1,angle,length,increment) ; left(angle) ; forward(length+increment) ; length:= length = increment ;}
}